[package]
name = "rust-flakes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#R rayon = "1.8"
log = "0.4"

[dev-dependencies]
actix = "0.11.0"
actix-rt = "2.2"
anyhow = "1.0.80"
env_logger = "0.11"
#futures = "0.3.30"
futures-executor = "0.3.30"
futures-util = "0.3.30"
rand = "0.8.5"
