[package]
name = "rust-flakes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
rand = "0.8.5"

[dev-dependencies]
anyhow = "1.0.80"
env_logger = "0.11"
futures-executor = "0.3.30"
futures-util = "0.3.30"

# Let's see how well we can work with the ingredients only.
#futures = "0.3.30"
